# gst-plugins-rockchip

./: README.md  configure.ac
gst-libs/: Makefile.am
gst-libs/rkisp/: Makefile.am
gst/rkv4l2/: Makefile.am  common.c  gstrkv4l2src.c  gstrkv4l2src.h  gstv4l2.c  gstv4l2bufferpool.c  gstv4l2object.c  gstv4l2object.h  gstv4l2src.c  gstv4l2vidorient.c  media-controller.c  media-controller.h  meson.build  v4l2_calls.c
gst/rkv4l2/rkisp/: rkisp_control_loop.h
